--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
      margin: 0;
      box-sizing: border-box;
      font-family: sans-serif;
+     color: white;
 }
 .container{
      width: 100vw;
@@ -17,14 +18,15 @@
      left: 50%;
      transform: translateX(-50%);
      width: 99vw;
+     height: 50px;
      bottom: 10px;
      border-radius: 20px;
      border: gray 2px solid;
      background-color: rgb(28, 29, 29);
+     user-select: none;
 
      display: flex;
      justify-content: space-between;
-     color: white;
      font-weight: bold;
 }
 
@@ -35,6 +37,14 @@
      padding: 10px;
 }
 
+.left{
+     gap: 10px;
+}
+.left svg{
+     background-color: black;
+     border-radius: 50%;
+}
+
 .center{
      gap: 30px;
 }
@@ -43,8 +53,65 @@ svg{
      fill: white;
 }
 
-svg:hover{
+.menu svg:hover{
      fill:rgb(168, 164, 164);
+}
+
+.musicControls{
+     display: none;
+     position: absolute;
+     background-color:  rgb(28, 29, 29);
+     min-width: 300px; 
+     min-height: 300px;
+     user-select: none;
+     border: gray 2px solid;
+     border-radius: 20px;
+     resize: both;
+     overflow: auto;
+}
+
+.musicVolume{
+     margin: 10px;
+     padding: 5px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     background-color: darkslategray;
+     border-radius: 10px;
+}
+.musicVolume-slider{
+     padding: 10px;
+     display: flex;
+     gap: 5px;
+}
+
+.backgroundSelect{
+     position: absolute;
+     display: none;
+     background-color:rgb(28, 29, 29);
+     justify-content: space-evenly;
+     align-items: center;
+     left: 50%;
+     transform: translateX(-50%);
+     width: 99vw;
+     bottom: 70px;
+     height: 100px;
+     border-radius: 20px;
+     border: gray 2px solid;
+}
+
+.backgroundSelect img{
+     width: 100px;
+     height: 70px;
+     border-radius: 10px;
+}
+
+
+
+
+.menuBtnClicked{
+     border-bottom: 2px gray solid;
 }
 
 
