--- a/style.css
+++ b/style.css
@@ -53,12 +53,11 @@ svg{
      fill: white;
 }
 
-.menu svg:hover{
+.menu svg:hover, .control-btns svg:hover, .musicSelect-btns svg:hover{
      fill:rgb(168, 164, 164);
 }
 
 .musicControls{
-     display: none;
      position: absolute;
      background-color:  rgb(28, 29, 29);
      min-width: 300px; 
@@ -68,6 +67,8 @@ svg{
      border-radius: 20px;
      resize: both;
      overflow: auto;
+     opacity: 0;
+     transition: opacity 0.5s ease;
 }
 
 .musicVolume{
@@ -83,12 +84,55 @@ svg{
 .musicVolume-slider{
      padding: 10px;
      display: flex;
+     align-items: center;
      gap: 5px;
+}
+
+.control-btns{
+     margin: 10px;
+     padding: 5px;
+     display: flex;
+     gap: 10px;
+     justify-content: center;
+     align-items: center;
+     background-color: darkslategray;
+     border-radius: 10px;
+}
+
+.musicSelect-btns{
+     margin: 10px;
+     padding: 5px;
+     display: flex;
+     gap: 10px;
+     justify-content: space-evenly;
+     align-items: center;
+     background-color: darkslategray;
+     border-radius: 10px;
+}
+
+.sleepy svg, .jazz svg, .chill svg{
+     height: 40px;
+     width: 40px;
+     padding: 7px;
+     border-radius: 50%;
+     background-color: gray;
+}
+.sleepy, .jazz, .chill{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     gap: 13px;
+}
+.mlabel{
+     font-size: 0.8rem;
 }
 
 .backgroundSelect{
      position: absolute;
-     display: none;
+     opacity: 0;
+     display: flex;
+     transition: opacity 0.5s ease; 
      background-color:rgb(28, 29, 29);
      justify-content: space-evenly;
      align-items: center;
@@ -107,12 +151,52 @@ svg{
      border-radius: 10px;
 }
 
-
-
+.ambientSounds{
+     margin: 10px;
+     padding: 5px;
+     display: flex;
+     flex-direction: column;
+     gap: 10px;
+     align-items: center;
+     background-color: darkslategray;
+     border-radius: 10px;
+}
+.softRain, .flowingRiver, .birds, .whiteNoise{
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: space-evenly;
+     background-color: rgb(28, 29, 29);
+     padding: 10px;
+     border-radius: 10px;
+     text-align: center;
+}
+.ambientSounds p{
+     width: 120px;
+}
 
 .menuBtnClicked{
      border-bottom: 2px gray solid;
 }
+.visible {
+     opacity: 1;
+ }
 
-
-
+input{
+     -webkit-appearance: none;
+     height: 3px;
+     background-color: lightblue;
+     border-radius: 5px;
+     outline: none;
+     border: none;
+}
+input::-webkit-slider-thumb{
+     -webkit-appearance: none;
+     height: 15px;
+     width: 15px;
+     background-color: blue;
+     border-radius: 50%;
+     border: 1px solid blue;
+     cursor: pointer;
+}
+ 
